deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gogame
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowstatesrv
  namespace: gogame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowstatesrv
  template:
    metadata:
      labels:
        app: flowstatesrv
    spec:
      containers:
        - name: flowstatesrv
          image: docker.io/makasim/flowstate:372320ea
          ports:
            - containerPort: 9282
          volumeMounts:
            - name: badgerdb-volume
              mountPath: /badgerdb
      volumes:
        - name: badgerdb-volume
          persistentVolumeClaim:
            claimName: gogame-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: flowstatesrv
  namespace: gogame
spec:
  selector:
    app: flowstatesrv
  ports:
    - protocol: TCP
      port: 9282
      targetPort: 9282
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowstatesrv-ingress
  namespace: gogame
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: public,publicsecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: publicsecure
spec:
  rules:
    - host: flowstate-gogame.makasim.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  flowstatesrv
                port:
                  number: 9282
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogame
  namespace: gogame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogame
  template:
    metadata:
      labels:
        app: gogame
    spec:
      containers:
        - name: gogame
          image: registry2.makasim.com/gogame:${VERSION}
          ports:
            - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: gogame
  namespace: gogame
spec:
  selector:
    app: gogame
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogame-ingress
  namespace: gogame
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: public,publicsecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: publicsecure
spec:
  rules:
    - host: gogame.makasim.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  gogame
                port:
                  number: 8181
